--- a/BarberShop/Views/Pagamento/Index.cshtml
+++ b/BarberShop/Views/Pagamento/Index.cshtml
@@ -7,7 +7,8 @@
 
 <div id="pagamentoPage" class="container-fluid mt-5">
     <h2 class="text-center mb-4">Gerenciar Pagamentos</h2>
-
+    <input type="hidden" id="ShowOnboarding" value="@ViewData["ShowOnboarding"]?.ToString()">
+    <input type="hidden" id="CurrentScreen" value="Pagamentos">
     <div class="d-flex justify-content-start mb-3">
         <button class="btn btnAdicionarCustom" data-bs-toggle="modal" data-bs-target="#inserirPagamentoModal">
             Inserir Pagamento
@@ -47,7 +48,7 @@
     </div>
 
     <!-- Tabela exibida em telas maiores -->
-    <div class="table-responsive d-none d-md-block">
+    <div id="tabelaPagamentosDiv" class="table-responsive d-none d-md-block">
         <table class="table table-dark table-striped" id="tabelaPagamentos">
             <thead>
                 <tr>
