--- a/BarberShop/Views/Servico/Index.cshtml
+++ b/BarberShop/Views/Servico/Index.cshtml
@@ -6,6 +6,11 @@
 }
 
 <div id="servicoPage" class="container-fluid">
+    <input type="hidden" id="ShowOnboarding" value="@ViewData["ShowOnboarding"]?.ToString()">
+    <input type="hidden" id="CurrentScreen" value="Servicos">
+    <input type="hidden" id="UserRole" value="@User.FindFirst(System.Security.Claims.ClaimTypes.Role)?.Value">
+    <input type="hidden" id="UserIdAdm" value="@ViewData["UserId"]?.ToString()">
+
     <h2 class="text-center">Gerenciar Serviços</h2>
     <button class="btn mb-3"
             id="btnAdicionarServico"
@@ -14,7 +19,7 @@
     </button>
 
     <!-- Tabela exibida em telas maiores -->
-    <div class="table-responsive d-none d-md-block">
+    <div id="tabelaServicosDiv" class="table-responsive d-none d-md-block">
         <table class="table table-dark table-striped" id="tabelaServicos">
             <thead>
                 <tr>
