--- a/BarberShop/Views/Admin/AvaliacoesBarbearia.cshtml
+++ b/BarberShop/Views/Admin/AvaliacoesBarbearia.cshtml
@@ -7,6 +7,7 @@
 }
 
 <div id="avaliacoesBarbeariaAdmin" class="container-fluid">
+    <input type="hidden" id="ShowOnboarding" value="@(ViewData["ShowOnboarding"] ?? false)" />
     <h2 class="text-center my-4">Avaliações da Barbearia</h2>
 
     <div id="loadingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 9999;">
