Ajustes js e onboarding

--- a/BarberShop/Views/Barbeiro/MeusAgendamentos.cshtml
+++ b/BarberShop/Views/Barbeiro/MeusAgendamentos.cshtml
@@ -12,7 +12,7 @@
 
 <div id="meusAgendamentosPage" class="container-fluid">
     <input type="hidden" name="urlSlug" id="urlSlugHidden" value="@((string)ViewData["UrlSlug"])">
-
+    <input type="hidden" id="ShowOnboarding" value="@ViewData["ShowOnboarding"]" />
     <form id="meusAgendamentosForm">
         <div class="row g-3">
             <div class="col-md-3">
