--- a/BarberShop/Views/Barbeiro/MeusDadosBarbeiro.cshtml
+++ b/BarberShop/Views/Barbeiro/MeusDadosBarbeiro.cshtml
@@ -6,6 +6,7 @@
 }
 
 <div id="meusdadosBarbeiroPage" class="container my-5 p-4 barbearia-dados-container">
+    <input type="hidden" id="ShowOnboarding" value="@ViewData["ShowOnboarding"]">
     <!-- Foto do Barbeiro e Upload -->
     <div class="text-center mb-4">
         <div class="position-relative d-inline-block">
