--- a/BarberShop/Views/Barbeiro/MeusHorarios.cshtml
+++ b/BarberShop/Views/Barbeiro/MeusHorarios.cshtml
@@ -5,6 +5,8 @@
 
 }
 <div id="meusHorariosPage" class="container mt-5">
+    <input type="hidden" id="ShowOnboarding" value="@ViewData["ShowOnboarding"]">
+
     <h2 class="text-center mb-4">Gerenciar Meus Horários</h2>
     <button class="btn btnAdicionarHorarioCustom mb-3"
             id="btnAdicionarHorario"
