--- a/BarberShop/Views/Barbeiro/MeusServicos.cshtml
+++ b/BarberShop/Views/Barbeiro/MeusServicos.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Meus Serviços - Barber Shop";
 }
 <div id="meusServicosBarbeiro" class="escolhemeubarbeiroPage">
+    <input type="hidden" id="ShowOnboarding" value="@ViewData["ShowOnboarding"]" />
 
     <div class="container">
         <h2 class="text-center mb-4">Meus Serviços</h2>
