--- a/BarberShop/Views/Barbeiro/MinhasAvaliacoes.cshtml
+++ b/BarberShop/Views/Barbeiro/MinhasAvaliacoes.cshtml
@@ -6,6 +6,7 @@
 }
 
 <div id="minhasAvaliacoesBarbeiro" class="container-fluid">
+    <input type="hidden" id="ShowOnboarding" value="@ViewData["ShowOnboarding"]" />
     <h2 class="text-center my-4">Minhas Avaliações</h2>
 
     <!-- Filtros -->
